Porting of  SPAGOBI-2095: As a technical user, when defining a hierarchic LOV, I want to specify the description column for each level of the tree See https://www.spagoworld.org/jira/browse/SPAGOBI-2095